# solana-transfer-data

./: .gitignore  Anchor.toml  Cargo.toml  README.md
app/: client.ts
client/: Cargo.toml
client/src/: lib.rs
common/: Cargo.toml
common/src/: crypto.rs  lib.rs  network.rs  protocol.rs
examples/frontend/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/frontend/src/: client.ts  idl.json  main.ts
program/: Cargo.toml  deploy.sh
program/src/: lib.rs
programs/solana-data-transfer/: Cargo.toml
programs/solana-data-transfer/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
solana-transfer-data-test/: Cargo.toml
solana-transfer-data-test/src/: main.rs
tests/: solana-data-transfer.ts
