[package]
name = "solana-transfer-data-client"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-transfer-data-common = { path = "../common" }
anyhow = "1.0.102"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = "1.49.0"
solana-sdk = "3.0.0"
solana-client = "3.1.9"
solana-keypair = "3.1.2"
crypto_box = "0.9.1"
base64 = "0.22.1"
hex = "0.4.3"
