[package]
name = "solana-transfer-data-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
log = "0.4.29"
solana-client = "3.1.9"
solana-commitment-config = "3.1.1"
aead = "0.5.2"
crypto_box = "0.9.1"
sha2 = "0.10.9"
shellexpand = "3.1.2"
serde_json = "1.0.149"
solana-sdk = "3.0.0"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
rand = { version = "0.10.0" }