[package]
name = "solana-transfer-data-server"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-transfer-data-common = { path = "../common" }
actix-web = "4.13.0"
anyhow = "1.0.102"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
serde_json = "1.0.149"
tokio = "1.49.0"
hex = "0.4.3"
solana-sdk = "3.0.0"
solana-client = "3.1.9"
solana-commitment-config = "3.1.1"
solana-transaction-status = "3.1.9"
crypto_box = "0.9.1"
base64 = "0.22.1"